terminando curso de POO intermedio y empezando ECMAScript

--- a/Curso intermedio POO/index.html
+++ b/Curso intermedio POO/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curso POO basico platzi</title>
+    <title>Curso intermedio POO</title>
 </head>
 <body>
 
-
-    <script src="/js/objetos.js" ></script>
+    <h1>Curso intermedio POO en JS</h1>
+    
+    <script src="main.js"> </script>
 </body>
 </html>
